Changed dir for saving uploads

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -5,6 +5,7 @@ play.http.secret.key = "x6vqVJLyC9cXuM5XTYJlU9Y0IeFvxMMsfiFvRs0HIazQTHUnj5r6D77/
 play.filters.enabled += play.filters.csrf.CSRFFilter
 play.server.forwarded.enabled = true
 play.modules.enabled += "modules.DatabaseModule"
+app.uploads.dir = "/var/lib/bugshelv/uploads"
 
 # Database
 db {
